--- a/manager/material-manage.html
+++ b/manager/material-manage.html
@@ -158,6 +158,34 @@
                     </a>
                 </li>
 
+                                <li class="nav-item">
+                    <a class="nav-link" href="all-jobcards.html">
+                        <div
+                            class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <svg width="12px" height="12px" viewBox="0 0 48 48" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>jobcards</title>
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF"
+                                        fill-rule="nonzero">
+                                        <g transform="translate(1716.000000, 291.000000)">
+                                            <g transform="translate(453.000000, 454.000000)">
+                                                <path class="color-background opacity-6"
+                                                    d="M40,8 L8,8 C5.79,8 4,9.79 4,12 L4,16 L44,16 L44,12 C44,9.79 42.21,8 40,8 Z">
+                                                </path>
+                                                <path class="color-background"
+                                                    d="M4,20 L4,36 C4,38.21 5.79,40 8,40 L40,40 C42.21,40 44,38.21 44,36 L44,20 L4,20 Z M16,32 L10,32 L10,26 L16,26 L16,32 Z M28,32 L22,32 L22,26 L28,26 L28,32 Z M38,32 L32,32 L32,26 L38,26 L38,32 Z">
+                                                </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                        <span class="nav-link-text ms-1">All Jobcards</span>
+                    </a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="material-out.html">
                         <div
