--- a/manager/view-jobcard-details.html
+++ b/manager/view-jobcard-details.html
@@ -158,6 +158,34 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="all-jobcards.html">
+                        <div
+                            class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <svg width="12px" height="12px" viewBox="0 0 48 48" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>jobcards</title>
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF"
+                                        fill-rule="nonzero">
+                                        <g transform="translate(1716.000000, 291.000000)">
+                                            <g transform="translate(453.000000, 454.000000)">
+                                                <path class="color-background opacity-6"
+                                                    d="M40,8 L8,8 C5.79,8 4,9.79 4,12 L4,16 L44,16 L44,12 C44,9.79 42.21,8 40,8 Z">
+                                                </path>
+                                                <path class="color-background"
+                                                    d="M4,20 L4,36 C4,38.21 5.79,40 8,40 L40,40 C42.21,40 44,38.21 44,36 L44,20 L4,20 Z M16,32 L10,32 L10,26 L16,26 L16,32 Z M28,32 L22,32 L22,26 L28,26 L28,32 Z M38,32 L32,32 L32,26 L38,26 L38,32 Z">
+                                                </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                        <span class="nav-link-text ms-1">All Jobcards</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="material-out.html">
                         <div
                             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -462,156 +490,6 @@
                                             <td>
                                                 <div class="d-flex px-2 py-1">
                                                     <div class="d-flex flex-column justify-content-center">
-                                                        <h6 class="mb-0 text-sm">1</h6>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <p class="text-xs font-weight-bold mb-0 bg-warning text-dark m-0 p-1">
-                                                    pending</p>
-                                                <p class="text-xs font-weight-bold mb-0 bg-info text-white m-0 p-1">
-                                                    pre-treat</p>
-                                                <p class="text-xs font-weight-bold mb-0 bg-primary text-white m-0 p-1">
-                                                    powder-applied</p>
-                                                <p class="text-xs font-weight-bold mb-0 bg-success text-dark m-0 p-1">
-                                                    delivered</p>
-                                            </td>
-                                            <td>
-                                                <p class="text-xs font-weight-bold mb-0">03/11/2025</p>
-                                            </td>
-
-                                            <td>
-                                                <p class="text-xs font-weight-bold mb-0">DC-JB-001</p>
-                                            </td>
-                                            <!-- nested table -->
-                                            <td colspan="4" class="p-0">
-                                                <table
-                                                    class="table table-bordered table-sm m-0 text-center align-middle">
-                                                    <thead class="table-light">
-                                                        <tr>
-                                                            <th class="text-xs">Product / Material Description</th>
-                                                            <th class="text-xs">Paint Code (RAL)</th>
-                                                            <th class="text-xs">Paint Name</th>
-                                                            <th class="text-xs">Paint Used (Qty)</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <td>
-                                                                <p class="m-0 text-secondary text-xs font-weight-bold">
-                                                                    Window Frame</p>
-                                                                <p class="m-0 text-secondary text-xs font-weight-bold">
-                                                                    120 KG</p>
-                                                                <p class="m-0 text-secondary text-xs font-weight-bold">
-                                                                    ALU</p>
-                                                            </td>
-                                                            <td>
-                                                                <span
-                                                                    class="badge bg-gradient-info text-white text-xs font-weight-bold">RAL-344</span>
-                                                            </td>
-                                                            <td>
-                                                                <span
-                                                                    class="text-secondary text-xs font-weight-bold">Red
-                                                                    Color</span>
-                                                            </td>
-                                                            <td>
-                                                                <span class="text-secondary text-xs font-weight-bold">12
-                                                                    KG</span>
-                                                            </td>
-                                                        </tr>
-
-                                                        <tr>
-                                                            <td>
-                                                                <p class="m-0 text-secondary text-xs font-weight-bold">
-                                                                    Window Frame</p>
-                                                                <p class="m-0 text-secondary text-xs font-weight-bold">
-                                                                    120 KG</p>
-                                                                <p class="m-0 text-secondary text-xs font-weight-bold">
-                                                                    ALU</p>
-                                                            </td>
-                                                            <td>
-                                                                <span
-                                                                    class="badge bg-gradient-info text-white text-xs font-weight-bold">RAL-344</span>
-                                                            </td>
-                                                            <td>
-                                                                <span
-                                                                    class="text-secondary text-xs font-weight-bold">Red
-                                                                    Color</span>
-                                                            </td>
-                                                            <td>
-                                                                <span class="text-secondary text-xs font-weight-bold">12
-                                                                    KG</span>
-                                                            </td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </td>
-                                            <!-- nested table -->
-
-                                            <td class="align-middle text-center">
-                                                <span class="text-secondary text-xs font-weight-bold">03/11/2025</span>
-                                                <br>
-                                                <button type="button" class="btn btn-success px-3 py-2 rounded m-0"
-                                                    data-bs-toggle="modal" data-bs-target="#pretreatModal">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                            </td>
-                                            <td class="align-middle text-center">
-                                                <span class="text-secondary text-xs font-weight-bold">03/11/2025</span>
-                                                <br>
-                                                <button type="button" class="btn btn-success px-3 py-2 rounded m-0"
-                                                    data-bs-toggle="modal" data-bs-target="#powderappliedModal">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                            </td>
-                                            <td class="align-middle text-center">
-                                                <span class="text-secondary text-xs font-weight-bold">03/11/2025</span>
-                                                <br>
-                                                <button type="button" class="btn btn-success px-3 py-2 rounded m-0"
-                                                    data-bs-toggle="modal" data-bs-target="#deliveredModal">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                            </td>
-                                            <td class="align-middle text-center text-sm">
-                                                <div class="d-flex gap-2 flex-column">
-
-                                                    <a href="jobcard-test.html"
-                                                        class="btn btn-primary px-3 py-2 rounded m-0">
-                                                        Give Test
-                                                    </a>
-                                                    <a href="jobcard-test.html"
-                                                        class="btn btn-outline-secondary px-3 py-2 rounded m-0">
-                                                        Test Again
-                                                    </a>
-
-                                                    <a href="test-result.html"
-                                                        class="btn btn-outline-primary px-3 py-2 rounded m-0">
-                                                        Test Result
-                                                    </a>
-                                                    <a href="test-result.html"
-                                                        class="btn btn-outline-success px-3 py-2 rounded m-0">
-                                                        Print Jobcard
-                                                    </a>
-
-                                                    <div>
-                                                        <a href="edit-jobcard.html" class="btn btn-info rounded m-0">
-                                                            <i class="fa fa-pencil"></i>
-                                                        </a>
-
-                                                        <button type="button" class="btn btn-danger rounded m-0"
-                                                            data-bs-toggle="modal" data-bs-target="#deleteModal">
-                                                            <i class="fa fa-trash"></i>
-                                                        </button>
-                                                    </div>
-
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-
-                                            <td>
-                                                <div class="d-flex px-2 py-1">
-                                                    <div class="d-flex flex-column justify-content-center">
                                                         <h6 class="mb-0 text-sm">2</h6>
                                                     </div>
                                                 </div>
@@ -734,10 +612,11 @@
                                                         Test Again
                                                     </a>
 
-                                                    <a href="test-result.html"
+                                                    <button type="button" data-bs-toggle="modal"
+                                                        data-bs-target="#testresultModal"
                                                         class="btn btn-outline-primary px-3 py-2 rounded m-0">
                                                         Test Result
-                                                    </a>
+                                                    </button>
                                                     <a href="test-result.html"
                                                         class="btn btn-outline-success px-3 py-2 rounded m-0">
                                                         Print Jobcard
@@ -791,6 +670,85 @@
                 </form>
             </div>
         </div>
+
+        <!-- QC Test Result Modal -->
+        <div class="modal fade" id="testresultModal" tabindex="-1" aria-labelledby="testResultLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <form class="modal-content shadow-lg border-0 rounded-3">
+                    <div class="modal-header">
+                        <h5 class="modal-title fw-semibold" id="testResultLabel">
+                            <i class="fa fa-flask me-2"></i>QC Test Results
+                        </h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered align-middle mb-0">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th style="width: 5%">#</th>
+                                        <th>Test Name</th>
+                                        <th>Observation</th>
+                                        <th>Result</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Cross Hatch Adhesion</td>
+                                        <td>GT0</td>
+                                        <td><span class="badge bg-success">PASS</span> – Excellent adhesion</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Pencil Hardness</td>
+                                        <td>2H</td>
+                                        <td><span class="badge bg-success">PASS</span> – Meets hardness criteria</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>Impact Resistance</td>
+                                        <td>45 kg·cm</td>
+                                        <td><span class="badge bg-warning text-dark">ACCEPTABLE</span> – General powder
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Conical Mandrel Bend</td>
+                                        <td>No cracks or detachment</td>
+                                        <td><span class="badge bg-success">PASS</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>Cupping Test</td>
+                                        <td>8 mm</td>
+                                        <td><span class="badge bg-success">PASS</span> – Meets Duracoat standard</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Gloss Measurement</td>
+                                        <td>Matt – 25 GU</td>
+                                        <td><span class="badge bg-success">PASS</span> – Within range</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                            <i class="fa fa-times me-1"></i>Close
+                        </button>
+                        <button type="button" class="btn btn-warning">
+                            <i class="fa fa-download me-1"></i>Download
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
     </main>
 
     <!--   Core JS Files   -->
