--- a/manager/stock-manage.html
+++ b/manager/stock-manage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
-    <title>Add Jobcard</title>
+    <title>Paints Management</title>
     <!-- Fonts and icons -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <!-- Nucleo Icons -->
@@ -130,7 +130,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="order-create.html">
+                    <a class="nav-link" href="order-create.html">
                         <div
                             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                             <svg width="12px" height="12px" viewBox="0 0 48 48" version="1.1"
@@ -213,7 +213,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="stock-manage.html">
+                    <a class="nav-link active" href="stock-manage.html">
                         <div
                             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                             <svg width="12px" height="12px" viewBox="0 0 48 48" version="1.1"
@@ -321,11 +321,10 @@
                             <a class="opacity-5 text-dark" href="javascript:;">Manager</a>
                         </li>
                         <li class="breadcrumb-item text-sm text-dark active" aria-current="page">
-                            Add Jobcards
+                            Manage Stocks
                         </li>
                     </ol>
-                    <h6 class="font-weight-bolder mb-0">Here you can create jobcards for each client</h6>
-                    <!-- <h5 class="font-weight-bolder mb-0">Client Name/ Email / Mobile</h5> -->
+                    <h6 class="font-weight-bolder mb-0">All Paint Stocks</h6>
                 </nav>
                 <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
                     <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -432,119 +431,148 @@
                 <div class="col-12">
                     <div class="card mb-4">
                         <div class="card-body px-0 pt-0 pb-2">
-                            <form action="" class="m-4">
-
-                                <!-- Row 1 -->
-                                <h6 class="font-weight-bolder mb-0">Client's Details:</h6>
-                                <div class="row mb-3">
-                                    <div class="col-md-4">
-                                        <label class="form-label">Client Name<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <label class="form-label">Client Email<span class="text-danger">*</span></label>
-                                        <input type="email" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <label class="form-label">Mobile<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" readonly>
-                                    </div>
-                                </div>
-
-                                <!-- Row 2 -->
-                                <h6 class="font-weight-bolder mb-0">Create Jobcard:</h6>
-                                <div class="row mb-3">
-                                    <div class="col-md-4">
-                                        <label class="form-label">Date<span class="text-danger">*</span></label>
-                                        <input type="date" class="form-control">
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        <label class="form-label">Order No.<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" placeholder="Enter Order No." readonly>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <label class="form-label">Jobcard No.<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" placeholder="Enter Order No.">
-                                    </div>
-                                </div>
-
-                                <!-- Row 3 -->
-                                <div class="row mb-3">
-                                    <div class="col-md-12">
-                                        <label class="form-label">Product/ Material Description<span
-                                                class="text-danger">*</span></label>
-                                        <div class="border rounded p-2" style="max-height: 220px; overflow-y: auto;">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="x" value="material1"
-                                                    id="mat1">
-                                                <label class="form-check-label" for="mat1">Metal Frame</label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="x" value="material2"
-                                                    id="mat2">
-                                                <label class="form-check-label" for="mat2">Window Panel</label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="x" value="material3"
-                                                    id="mat3">
-                                                <label class="form-check-label" for="mat3">Door Handle</label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="x" value="material4"
-                                                    id="mat4">
-                                                <label class="form-check-label" for="mat4">Support Rod</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Dynamic Row 4 -->
-                                <div class="row mb-3">
-                                    <div class="col-md-1">
-                                        <label class="form-label">Type<span class="text-danger">*</span></label>
-                                        <input type="text" value="MS" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label">Product Name<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label">Product Quantity<span
-                                                class="text-danger">*</span></label>
-                                        <input type="text" class="form-control">
-                                    </div>
-
-
-                                    <div class="col-md-1">
-                                        <label class="form-label">Product Unit<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label">Paint Code(RAL)<span
-                                                class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label">Paint Name<span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" readonly>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="form-label">Paint Used(Qty)</label>
-                                        <input type="number" class="form-control" placeholder="KG">
-                                    </div>
-                                </div>
-
-                                <div class="d-flex justify-content-end">
-                                    <button type="submit" class="btn btn-primary">Create Jobcard</button>
-                                </div>
-                            </form>
+                            <div class="table-responsive p-0">
+                                <table class="table align-items-center mb-0">
+                                    <thead>
+                                        <tr>
+                                            <th
+                                                class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Paint Details
+                                            </th>
+                                            <th
+                                                class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                                Brand Name
+                                            </th>
+                                            <th
+                                                class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                RAL
+                                            </th>
+                                            <th
+                                                class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Shade Name
+                                            </th>
+                                            <th
+                                                class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Finish
+                                            </th>
+                                            <th
+                                                class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Purchase Quantity
+                                            </th>
+                                            <th
+                                                class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Status
+                                            </th>
+                                            <th
+                                                class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                Actions
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <div class="d-flex px-2 py-1">
+                                                    <div class="d-flex flex-column justify-content-center">
+                                                        <h6 class="mb-0 text-sm">Paint Name</h6>
+                                                        <p class="text-xs text-secondary mb-0">
+                                                            Unique ID
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <p class="text-xs font-weight-bold mb-0">Burger</p>
+                                            </td>
+                                            <td class="align-middle text-center text-sm">
+                                                <span class="badge badge-sm bg-gradient-success">Ral Code</span>
+                                            </td>
+                                            <td class="align-middle text-center">
+                                                <span class="text-secondary text-xs font-weight-bold">Shade Name</span>
+                                            </td>
+                                            <td class="align-middle text-center">
+                                                <span class="text-secondary text-xs font-weight-bold">Texture</span>
+                                            </td>
+                                            <td class="align-middle text-center">
+                                                <span class="text-secondary text-xs font-weight-bold">30 KG</span>
+                                            </td>
+                                            <td class="align-middle text-center text-sm">
+                                                <span class="badge badge-sm bg-success">In stock</span>
+                                                <span class="badge badge-sm bg-warning text-dark">Need attention</span>
+                                                <span class="badge badge-sm bg-danger">Out of stock</span>
+                                            </td>
+                                            <td class="align-middle text-center text-sm">
+                                                <div class="d-flex gap-2 justify-content-center">
+                                                    <button type="button" class="btn btn-primary px-3 py-2 rounded m-0"
+                                                        data-bs-toggle="modal" data-bs-target="#addstockModal">
+                                                        <i class="fa fa-plus me-2"></i>Add Stock
+                                                    </button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
+
+        <!-- Add Stock Modal -->
+        <div class="modal fade" id="addstockModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <form class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add Paint Stock(Qty)</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="paintName">Paint Name(RAL Code)</label>
+                                    <input type="text" name="" class="form-control" id="paintName" readonly/>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="brandName">Brand Name</label>
+                                    <input type="text" name="" class="form-control" id="brandName" readonly/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="shadeName">Shade Name</label>
+                                    <input type="text" class="form-control" id="shadeName" readonly/>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="texture">Finishing</label>
+                                    <input type="text" class="form-control" id="texture" readonly/>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="weight">Add Paint Quantity</label>
+                                    <input type="text" class="form-control" id="weight" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                            Close
+                        </button>
+                        <button type="button" class="btn btn-primary">Stock Update</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </main>
 
     <!--   Core JS Files   -->
